# schlepper

./: .gitignore  README.md  it.env.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  zizmor.yml
docs/: api.rst  changelog.rst  conf.py  index.rst  usage.rst
src/schlepper/: __init__.py  _auth.py  _client.py  _constants.py  _deploy.py  _errors.py  _hash.py  _types.py  _upload.py  _validate.py
tests/: conftest.py  test_auth.py  test_client.py  test_deploy.py  test_hash.py  test_integration.py  test_upload.py  test_validate.py
