[project]
name = "schlepper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "William Woodruff", email = "william@astral.sh" }]
requires-python = ">=3.14"
dependencies = ["blake3>=1.0.8", "urllib3>=2.6.3"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest]
markers = [
    "integration: integration tests that hit the Cloudflare API (use -m integration to run)",
]
addopts = ["-m", "not integration", "--strict-markers"]

[tool.uv]
exclude-newer = "P14D"
# Don't perform cooldowns of our own tools.
exclude-newer-package = { ruff = false, ty = false }

[tool.uv.audit]
ignore = [
    "GHSA-5239-wwwm-4pmq", # because: ReDoS spam against pygments
]

[dependency-groups]
dev = ["coverage>=7.13.5", "pytest>=9.0.2", "ruff>=0.15.9", "ty>=0.0.29"]
